src/_includes/stylesheets/global.css
{% include "stylesheets/_reset.css" %}

{% include "stylesheets/global/color.css" %}
{% include "stylesheets/global/space.css" %}
{% include "stylesheets/global/font-size.css" %}
{% include "stylesheets/global/font-size.css" %}

{% include "stylesheets/compositions/stack.css" %}
{% include "stylesheets/compositions/cluster.css" %}

{% include "stylesheets/utilities/wrapper.css" %}
{% include "stylesheets/utilities/visually-hidden.css" %}
{% include "stylesheets/utilities/uppercased.css" %}

:root {
  --color-primary: var(--color-blueberry);

  /* sufficient contrast */
  --color-text: var(--color-gray-900);
  --color-text-weak: var(--color-gray-800);
  --color-text-weaker: var(--color-gray-700);

  /* disabled; which doesn't need sufficient contrast */
  --color-text-weakest: var(--color-gray-500);

  --space: var(--space-m);

  --color-border: var(--color-gray-300);
  --border-radius: 5px;
  --box-shadow-card: 0 0 0 1px var(--color-border), 0 1px 5px rgba(12, 12, 12, 0.05), 0 0 40px rgba(12, 12, 12, 0.015);

  --color-health-shortcuts-accent: #fd1148;
  --color-brb-accent: #30b0c7;
  --color-mastodon-accent: #6364ff;
  --color-github-accent: #1a1f25;
  --color-eemgoed-accent: #4d7c0f;

  --color-background: var(--color-primary-950);
  --color-background-pattern: oklch(from var(--color-primary-800) l c h / 0.2);
  --color-background-banner: oklch(from var(--color-primary-800) l c h / 0.3);
}

@media(prefers-color-scheme: dark) {
  :root {
    --color-text: var(--color-gray-100);
    --color-text-weak: var(--color-gray-200);
    --color-text-weaker: var(--color-gray-300);
    --color-text-weakest: var(--color-gray-500);

    --space: var(--space-m);

    --color-github-accent: #1a1f25;

    --color-background: var(--color-primary-50);
    --color-background-pattern: var(--color-primary-100);
  }
}

body {
  margin: 0;
  color: var(--color-text);

  font-size: var(--step-0);
  font-family: system-ui, sans-serif;

  text-align: left;

  --pattern-size: 32px;
  --background-size: var(--pattern-size) var(--pattern-size);
  --background-size-half: calc(var(--pattern-size) / 2) calc(var(--pattern-size) / 2);

  background:
    repeating-linear-gradient( 45deg, transparent calc(-650%/13) calc(50%/13),var(--color-background-pattern) 0 calc(100%/13),
    transparent 0 calc(150%/13),var(--color-background-pattern) 0 calc(200%/13),
    transparent 0 calc(250%/13),var(--color-background-pattern) 0 calc(300%/13)),

    repeating-linear-gradient( 45deg, transparent calc(-650%/13) calc(50%/13),var(--color-background-pattern) 0 calc(100%/13),
    transparent 0 calc(150%/13),var(--color-background-pattern) 0 calc(200%/13),
    transparent 0 calc(250%/13),var(--color-background-pattern) 0 calc(300%/13)) var(--background-size-half),

    repeating-linear-gradient(-45deg, transparent  calc(-650%/13) calc(50%/13),var(--color-background-pattern) 0 calc(100%/13),
    transparent 0 calc(150%/13),var(--color-background-pattern) 0 calc(200%/13),
    transparent 0 calc(250%/13),var(--color-background-pattern) 0 calc(300%/13)),

    repeating-linear-gradient(-45deg, transparent calc(-650%/13) calc(50%/13),var(--color-background-pattern) 0 calc(100%/13),
    transparent 0 calc(150%/13),var(--color-background-pattern) 0 calc(200%/13),
    transparent 0 calc(250%/13),var(--color-background-pattern) 0 calc(300%/13)) var(--background-size-half) var(--color-background);
  background-size: var(--background-size);
}

:where(body, h1, h2, h3, h4, p, figure, blockquote, dl, dd) {
    margin-block:0
}

table {
  text-align: left;
  border-collapse: collapse;
  display: block;
  max-width: fit-content;
  overflow-x: auto;

  --border-color: var(--color-primary-50);
}

thead {
  border-block-end: 2px solid var(--border-color);
}

tfoot {
  border-block-start: 2px solid var(--border-color);
}

th, td {
  border: 1px solid color-mix(in srgb, var(--border-color), transparent 85%);
  padding: var(--space-2xs) var(--space-3xs);
}

tbody tr:nth-child(odd) {
	background: color-mix(in srgb, var(--color-primary), transparent 95%);
}

.brand-header {
  --gutter: var(--space-xs);
  font-size: var(--step-2);

  padding-block: var(--space-l);
  margin-block-end: var(--space-xl);

  background-color: var(--color-background-banner);
}

.main-content {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
}

.theme-picker {
  display: none;
}

.theme-picker button {
  cursor: pointer;
  outline: inherit;
  background: none;
  border: none;

  width: var(--pattern-size);
  height: var(--pattern-size);

  border-radius: 30%;

  background:
    repeating-linear-gradient( 45deg, transparent calc(-650%/13) calc(50%/13),var(--color-primary) 0 calc(100%/13),
    transparent 0 calc(150%/13),var(--color-primary) 0 calc(200%/13),
    transparent 0 calc(250%/13),var(--color-primary) 0 calc(300%/13)),

    repeating-linear-gradient( 45deg, transparent calc(-650%/13) calc(50%/13),var(--color-primary) 0 calc(100%/13),
    transparent 0 calc(150%/13),var(--color-primary) 0 calc(200%/13),
    transparent 0 calc(250%/13),var(--color-primary) 0 calc(300%/13)) var(--background-size-half),

    repeating-linear-gradient(-45deg, transparent  calc(-650%/13) calc(50%/13),var(--color-primary) 0 calc(100%/13),
    transparent 0 calc(150%/13),var(--color-primary) 0 calc(200%/13),
    transparent 0 calc(250%/13),var(--color-primary) 0 calc(300%/13)),

    repeating-linear-gradient(-45deg, transparent calc(-650%/13) calc(50%/13),var(--color-primary) 0 calc(100%/13),
    transparent 0 calc(150%/13),var(--color-primary) 0 calc(200%/13),
    transparent 0 calc(250%/13),var(--color-primary) 0 calc(300%/13)) var(--background-size-half) oklch(from var(--color-primary) 0.55 c h);
  background-size: var(--background-size);
}

h1 {
  font-size: var(--step-5);
  font-weight: normal;
}

h2 {
  font-weight: normal;
  font-size: var(--step-4);
}

article {
  margin-block-end: var(--space-xl);
}

a:not([class]) {
  text-decoration-thickness: .2ex;
  text-decoration-color: var(--color-primary);
  text-underline-offset: .2ex;

  @media(prefers-color-scheme: dark) {
    text-decoration-color: var(--color-primary-700);
  }
}

a:not([class]):hover {
  text-underline-offset: .1ex;
}

pre[data-language]:not([data-language=""]) {
  position: relative;

  &::before {
    content: attr(data-language);
    display: block;
    position: absolute;
    padding: 0;
    font-size: var(--step--2);
    top: calc(var(--space-m) / 3);
    right: var(--space-m);
    text-transform: lowercase;
  }
}

pre {
  padding: var(--space-m);
  overflow: hidden;
}

pre code {
  overflow-x: scroll;
  display: block;
}

.prose h2 {
  margin-block-start: var(--space-2xl);
}

.home {
  --space: var(--space-xl);
}

.home .stack * {
  --space: var(--space-2xs);
  --gutter: var(--space-xs);
}

.health-shortcuts a {
  --color-primary: var(--color-health-shortcuts-accent);
  @media(prefers-color-scheme: dark) {
    --color-primary-700: var(--color-health-shortcuts-accent);
  }
}

.brb {
  --color-primary: var(--color-brb-accent);

  @media(prefers-color-scheme: dark) {
    --color-primary-700: var(--color-brb-accent);
  }
}

.eemgoed {
  --color-primary: var(--color-eemgoed-accent);

  @media(prefers-color-scheme: dark) {
    --color-primary-700: var(--color-eemgoed-accent);
  }
}

.github {
  --color-primary: var(--color-github-accent);

  @media(prefers-color-scheme: dark) {
    --color-primary-700: white;
  }
}

.mastodon {
  --color-primary: var(--color-mastodon-accent);
  @media(prefers-color-scheme: dark) {
    --color-primary-700: var(--color-mastodon-accent);
  }
}

ul[role="list"],
ol[role="list"] {
  padding: 0;
}

.post-item__icon, .post-item__date {
  vertical-align: middle;
}

.post-item__icon {
  width: 20px;
  height: 20px;
}

.post-item__date {
  font-size: var(--step--1);
  color: var(--color-text-weaker);
}

.post .post--metadata {
  --space: var(--space-2xs);
  padding-inline-start: 0;
  font-size: var(--step--1);
  color: var(--color-text-weaker);
  list-style: none;
}

.post .post--outdated {
  margin-block: var(--space-m);
  padding: var(--space-m);
  border: 1px solid var(--color-primary-300);
  border-radius: var(--border-radius);
  background-color: var(--color-background-banner);
  color: var(--color-text);
}

@media(prefers-color-scheme: dark) {
  .post .post--outdated {
    border-color: var(--color-primary-700);
    background-color: var(--color-background-banner);
  }
}

.heart-rate {
  margin-block-start: var(--space-m);
  display: flex;
  justify-content: center;
  background: var(--color-primary);
  padding: var(--space-m);
  width: 300px;
  color: white;
}

.heart-rate__inner {
  position: relative;
  height: 73px;
  overflow-x: hidden;
}

.heart-rate__inner::before {
  content: "";
  position: absolute;
  width: 100%;
  height: 100%;
  inset-block-start: 0;
  inset-inline-end: 0;
  background: var(--color-primary);
  animation: heartRateStart 1.5s linear infinite;
}

.heart-rate__inner::after {
  content: "";
  position: absolute;
  width: 120%;
  height: 100%;
  inset-block-start: 0;
  inset-inline-start: -120%;
  background: rgba(0, 0, 0, 1);
  background: linear-gradient(
    to right,
    var(--color-primary) 0%,
    var(--color-primary) 80%,
    rgba(from var(--color-primary) r g b / 0) 100%
  );
	/* background: color-mix(in srgb, var(--color-primary), transparent 95%); */
  animation: heartRateEnd 1.5s linear infinite;
}

@keyframes heartRateStart {
  0% {
    width: 100%;
  }

  50% {
    width: 0;
  }

  100% {
    width: 0;
  }
}

@keyframes heartRateEnd {
  0% {
    inset-inline-start: -120%;
  }

  30% {
    inset-inline-start: -120%;
  }

  100% {
    inset-inline-start: 0;
  }
}

